; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/misc/sgi-xp/extr_xpc_sn2.c_xpc_get_partition_rsvd_page_pa_sn2.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/misc/sgi-xp/extr_xpc_sn2.c_xpc_get_partition_rsvd_page_pa_sn2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SALRET_OK = common dso_local global i64 0, align 8
@xpSuccess = common dso_local global i32 0, align 4
@SALRET_MORE_PASSES = common dso_local global i64 0, align 8
@xpNeedMoreInfo = common dso_local global i32 0, align 4
@xpSalError = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32*, i64*, i64*)* @xpc_get_partition_rsvd_page_pa_sn2 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @xpc_get_partition_rsvd_page_pa_sn2(i8* %0, i32* %1, i64* %2, i64* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i64*, align 8
  %8 = alloca i64*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i32* %1, i32** %6, align 8
  store i64* %2, i64** %7, align 8
  store i64* %3, i64** %8, align 8
  %11 = load i8*, i8** %5, align 8
  %12 = ptrtoint i8* %11 to i32
  %13 = load i32*, i32** %6, align 8
  %14 = load i64*, i64** %7, align 8
  %15 = bitcast i64* %14 to i32*
  %16 = load i64*, i64** %8, align 8
  %17 = bitcast i64* %16 to i32*
  %18 = call i64 @sn_partition_reserved_page_pa(i32 %12, i32* %13, i32* %15, i32* %17)
  store i64 %18, i64* %9, align 8
  %19 = load i64, i64* %9, align 8
  %20 = load i64, i64* @SALRET_OK, align 8
  %21 = icmp eq i64 %19, %20
  br i1 %21, label %22, label %24

22:                                               ; preds = %4
  %23 = load i32, i32* @xpSuccess, align 4
  store i32 %23, i32* %10, align 4
  br label %33

24:                                               ; preds = %4
  %25 = load i64, i64* %9, align 8
  %26 = load i64, i64* @SALRET_MORE_PASSES, align 8
  %27 = icmp eq i64 %25, %26
  br i1 %27, label %28, label %30

28:                                               ; preds = %24
  %29 = load i32, i32* @xpNeedMoreInfo, align 4
  store i32 %29, i32* %10, align 4
  br label %32

30:                                               ; preds = %24
  %31 = load i32, i32* @xpSalError, align 4
  store i32 %31, i32* %10, align 4
  br label %32

32:                                               ; preds = %30, %28
  br label %33

33:                                               ; preds = %32, %22
  %34 = load i32, i32* %10, align 4
  ret i32 %34
}

declare dso_local i64 @sn_partition_reserved_page_pa(i32, i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
